// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messages page click on convo 1`] = `
<div>
  <div
    class="App"
  >
    <nav
      class="headerBar navbar navbar-expand-md navbar-light bg-light"
    >
      <div
        class="container"
      >
        <span
          class="navbar-brand"
          role="presentation"
        >
          Team20
        </span>
        <button
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="navbar-collapse collapse"
        >
          <div
            class="me-auto navbar-nav"
          >
            <a
              class="nav-link"
              role="presentation"
            >
              Groups
            </a>
            <a
              class="nav-link"
              role="presentation"
            >
              Messages
            </a>
          </div>
          <div
            class="hstack gap-2"
          >
            <img
              class="rounded-circle"
              height="30"
              src="./photo.jpg"
              width="30"
            />
            <span
              class="navbar-text"
            />
          </div>
        </div>
      </div>
    </nav>
    <div
      class="App container"
    >
      <div
        class="w-100 container"
      >
        <h1>
          You have no messages!
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`Messages page should match snapshot 1`] = `
<div>
  <div
    class="App"
  >
    <nav
      class="headerBar navbar navbar-expand-md navbar-light bg-light"
    >
      <div
        class="container"
      >
        <span
          class="navbar-brand"
          role="presentation"
        >
          Team20
        </span>
        <button
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="navbar-collapse collapse"
        >
          <div
            class="me-auto navbar-nav"
          />
          <div
            class="hstack gap-2"
          >
            <span
              class="navbar-text"
            />
          </div>
        </div>
      </div>
    </nav>
    <div
      class="App container"
    >
      <div
        class="w-100 container"
      >
        <h1>
          You have no messages!
        </h1>
      </div>
    </div>
  </div>
</div>
`;
